--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+futures = "0.3.30"
 lazy_static = "1.5.0"
 rodio = "0.19.0"
+sea-orm-migration = "0.12.15"
 symphonia = "0.5.4"
 thiserror = "1.0.61"
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
+database = { path = "./database" }
