--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ rodio = "0.19.0"
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 database = { path = "./database" }
 metadata = { path = "./metadata" }
+analysis = { path = "./analysis" }
