--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 database = { path = "./database" }
 metadata = { path = "./metadata" }
 analysis = { path = "./analysis" }
+tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
