--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ metadata = { path = "./metadata" }
 analysis = { path = "./analysis" }
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
+serde = "1.0.204"
+serde_json = "1.0.120"
+clap = "4.5.9"
+pathdiff = "0.2.1"
