--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 
 [dependencies]
 futures = "0.3.30"
-rodio = "0.19.0"
+rodio = { version = "0.19.0", features = ["symphonia-all"] }
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 database = { path = "./database" }
 metadata = { path = "./metadata" }
