--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-
 # Added by cargo
 
 /target
@@ -136,3 +135,10 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+# Rust related
+.cargo/
+target/
+
+# Generated messages
+*/**/messages/
