--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,8 @@
-[package]
-name = "player"
-version = "0.1.0"
-edition = "2021"
+# This file is used for telling Rust-related tools
+# where various Rust crates are.
+# This also unifies `./target` output folder and
+# various Rust configurations.
 
-[lib]
-name = "player"
-path = "src/lib.rs"
-
-[dependencies]
-futures = "0.3.30"
-rodio = { version = "0.19.0", features = ["symphonia-all"] }
-tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
-database = { path = "./database" }
-metadata = { path = "./metadata" }
-analysis = { path = "./analysis" }
-playback = { path = "./playback" }
-tracing-subscriber = "0.3.18"
-tracing = "0.1.40"
-serde = "1.0.204"
-serde_json = "1.0.120"
-clap = "4.5.9"
-pathdiff = "0.2.1"
-prettytable = "0.10.0"
-dunce = "1.0.4"
-log = "0.4.22"
+[workspace]
+members = ["./native/*"]
+resolver = "2"
