--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   rinf: ^6.14.2
   protobuf: ^3.1.0
+  fluent_ui: ^4.9.0
+  flutter_acrylic: ^1.1.4
+  system_theme: ^3.0.0
+  go_router: ^14.2.1
+  window_manager: ^0.3.9
+  provider: ^6.1.2
+  url_launcher: ^6.3.0
+  mesh_gradient: ^1.3.7
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -59,7 +67,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: false
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
