--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -14,7 +14,10 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [dependencies]
 rinf = "6.14.2"
 prost = "0.12.6"
-tokio = { version = "1", features = ["sync", "rt"] }
+tokio = { version = "1", features = ["sync", "rt", "time"] }
+sea-orm = "0.12.15"
+database = { path = "../../database" }
+lazy_static = "1.5.0"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
