--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.2
   url_launcher: ^6.3.0
   mesh_gradient: ^1.3.7
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   build_runner: ^2.4.11
