--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -11,5 +11,5 @@ path = "src/lib.rs"
 [dependencies]
 log = { version = "0.4.22" }
 futures = "0.3.30"
-tokio = { version = "1.38.0", features = ["sync", "time"] }
+tokio = { version = "1.38.0", features = ["sync", "time", "macros"] }
 rodio = { version = "0.19.0", features = ["symphonia-all"] }
