--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^6.3.0
   mesh_gradient: ^1.3.7
   infinite_scroll_pagination: ^4.0.0
+  material_symbols_icons: ^4.2771.0
 
 dev_dependencies:
   build_runner: ^2.4.11
