--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   mesh_gradient: ^1.3.7
   infinite_scroll_pagination: ^4.0.0
   material_symbols_icons: ^4.2771.0
+  visibility_detector: ^0.4.0+2
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  crypto: ^3.0.3
+  crclib: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.11
