--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -13,3 +13,4 @@ log = { version = "0.4.22" }
 futures = "0.3.30"
 tokio = { version = "1.38.0", features = ["sync", "time", "macros"] }
 rodio = { version = "0.19.0", features = [] }
+rustfft = "6.2.0"
