--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   crclib: ^3.0.0
   reorderables: ^0.6.0
   material_color_utilities: ^0.8.0
+  file_picker: ^8.0.6
 
 dev_dependencies:
   build_runner: ^2.4.11
