--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
   crclib: ^3.0.0
   reorderables: ^0.6.0
   material_color_utilities: ^0.8.0
-  file_picker: ^8.0.6
+  get_storage: ^2.1.1
+  file_selector: ^1.0.3
 
 dev_dependencies:
   build_runner: ^2.4.11
