--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   material_color_utilities: ^0.8.0
   get_storage: ^2.1.1
   file_selector: ^1.0.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   build_runner: ^2.4.11
