--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   get_storage: ^2.1.1
   file_selector: ^1.0.3
   flutter_staggered_grid_view: ^0.7.0
+  hashlib: ^1.19.2
 
 dev_dependencies:
   build_runner: ^2.4.11
