--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -22,6 +22,7 @@ lazy_static = "1.5.0"
 dunce = "1.0.4"
 log = "0.4.22"
 tracing-subscriber = "0.3.18"
+paste = "1.0.15"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
