--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  rinf: ^6.14.2
+  rinf: 6.15.0
   protobuf: ^3.1.0
   fluent_ui: ^4.9.0
   flutter_acrylic: ^1.1.4
@@ -58,6 +58,7 @@ dependencies:
   file_selector: ^1.0.3
   flutter_staggered_grid_view: ^0.7.0
   hashlib: ^1.19.2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   build_runner: ^2.4.11
