--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   hashlib: ^1.19.2
   rxdart: ^0.28.0
+  flutter_shaders: ^0.1.2
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -82,6 +83,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  shaders:
+    - lib/shaders/gradient.frag
 
   # To add assets to your application, add an assets section, like this:
   # assets:
