feat: Implement cover grid for the artists view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   hashlib: ^1.19.2
   rxdart: ^0.28.0
   flutter_shaders: ^0.1.2
+  flip_card: ^0.7.0
+  flutter_boring_avatars: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.11
