--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flip_card: ^0.7.0
   flutter_boring_avatars: ^1.1.0
   logger: ^2.4.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -91,9 +92,8 @@ flutter:
     - lib/shaders/gradient.frag
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/mono_color_logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
