--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -14,3 +14,4 @@ futures = "0.3.30"
 tokio = { version = "1.38.0", features = ["sync", "time", "macros"] }
 rodio = { version = "0.19.0", features = [] }
 rustfft = "6.2.0"
+tokio-util = "0.7.11"
