--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -21,7 +21,6 @@ tokio = "1.38.0"
 arroy = "0.4.0"
 heed = "0.20.3"
 rand = "0.8.5"
-thiserror = "1.0.62"
 dunce = "1.0.4"
 async-channel = "2.3.1"
 deunicode = "1.6.0"
@@ -29,3 +28,4 @@ paste = "1.0.15"
 chrono = "0.4.38"
 tantivy = "0.22.0"
 tokio-util = "0.7.11"
+anyhow = "1.0.86"
