feat: Better error handling for audio file scanning

--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -17,3 +17,5 @@ log = "0.4.22"
 lofty = "0.20.1"
 regex = "1.10.6"
 analysis = { path = "../analysis" }
+anyhow = {version="1.0.86",  features = ["backtrace"] }
+
