--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -9,6 +9,8 @@ name = "analysis"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = {version="1.0.86",  features = ["backtrace"] }
+lazy_static = "1.5.0"
 log = "0.4.22"
 rustfft = "6.2.0"
 symphonia = "0.5.4"
