--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -30,3 +30,4 @@ tantivy = "0.22.0"
 tokio-util = "0.7.11"
 anyhow = {version="1.0.86",  features = ["backtrace"] }
 rayon = "1.10.0"
+seq-macro = "0.3.5"
