--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,13 @@ dependencies:
   rinf:
     git:
       url: https://github.com/Losses/rinf.git
-      ref: main
+      ref: b99ec4b
       path: flutter_package
   protobuf: ^3.1.0
   fluent_ui: ^4.9.0
   flutter_acrylic: ^1.1.4
   system_theme: ^3.0.0
   go_router: ^14.2.1
-  window_manager: ^0.4.2
   provider: ^6.1.2
   url_launcher: ^6.3.0
   mesh_gradient: ^1.3.7
