--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@
 [workspace]
 members = ["./native/*", "./cli"]
 resolver = "2"
+
+[patch.crates-io]
+lmdb-master-sys = { path = "./lmdb-master-sys" }
