--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
       ref: cbc7b5f
       path: flutter_package
   protobuf: ^3.1.0
-  fluent_ui: ^4.9.0
+  fluent_ui:
+    git:
+      url: https://github.com/Losses/fluent_ui.git
+      ref: 8a98ea66
   flutter_acrylic: ^1.1.4
   system_theme: ^3.0.0
   go_router: ^14.2.1
