--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  rinf:
-    git:
-      url: https://github.com/Losses/rinf.git
-      ref: cbc7b5f
-      path: flutter_package
+
   protobuf: ^3.1.0
   fluent_ui:
     git:
@@ -70,6 +66,7 @@ dependencies:
   logger: ^2.4.0
   flutter_svg: ^2.0.10+1
   macos_window_utils: ^1.5.0
+  rinf: ^6.15.0
 
 dev_dependencies:
   build_runner: ^2.4.11
