--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -25,7 +25,7 @@ tracing-subscriber = "0.3.18"
 paste = "1.0.15"
 tokio-util = "0.7.11"
 num_cpus = "1.16.0"
-anyhow = "1.0.89"
+anyhow = { version = "1.0.89", features = ["backtrace"] }
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
