feat: Support seeding mixes

--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -9,6 +9,7 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
+chrono = "0.4.38"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 
 [dependencies.sea-orm-migration]
