--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   macos_window_utils: ^1.5.0
   rinf: ^6.15.0
+  fixnum: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.11
