--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -26,6 +26,7 @@ paste = "1.0.15"
 tokio-util = "0.7.11"
 num_cpus = "1.16.0"
 anyhow = { version = "1.0.89", features = ["backtrace"] }
+futures = "0.3.30"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
