feat: Integrating system media playback api

--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -16,3 +16,5 @@ rodio = { version = "0.19.0", features = [] }
 rustfft = "6.2.0"
 tokio-util = "0.7.11"
 rand = "0.8.5"
+souvlaki = "0.7.3"
+anyhow = "1.0.89"
