--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -31,3 +31,4 @@ tokio-util = "0.7.11"
 anyhow = {version="1.0.86",  features = ["backtrace"] }
 rayon = "1.10.0"
 seq-macro = "0.3.5"
+once_cell = "1.19.0"
