--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   macos_window_utils: ^1.5.0
   rinf: ^6.15.0
   fixnum: ^1.1.0
+  responsive_framework: ^1.5.1
 
 dev_dependencies:
   build_runner: ^2.4.11
