fix: Performance issue while resizing window for collection list pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   rinf: ^6.15.0
   fixnum: ^1.1.0
   responsive_framework: ^1.5.1
+  very_good_infinite_list: ^0.8.0
 
 dev_dependencies:
   build_runner: ^2.4.11
