feat: Implement fullscreen and saved volume state

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   fixnum: ^1.1.0
   responsive_framework: ^1.5.1
   very_good_infinite_list: ^0.8.0
+  flutter_fullscreen: ^1.0.1
 
 dev_dependencies:
   build_runner: ^2.4.11
