--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -18,13 +18,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq alsa-base alsa-source liblmdb-dev  protobuf-compiler clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev
 
-      - name: setup flutter
+      - name: Setup flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      
+      - name: Setup Rust Cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Install the Rust dependencies
         run: cargo install 'flutter_rust_bridge_codegen' rinf protoc-gen-prost
@@ -36,7 +39,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate message files
-        run: flutter pub rinf message
+        run: rinf message
 
       - name: build linux
         run: flutter build linux --verbose
