--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -53,7 +53,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate message files
-        run: rinf message --experimental_allow_proto3_optional
+        run: rinf message 
 
       - name: build linux
         run: flutter build linux --verbose
