--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev
+          sudo apt-get install liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev
 
       - name: Setup flutter
         uses: subosito/flutter-action@v2
@@ -47,7 +47,7 @@ jobs:
         run: rinf message 
 
       - name: build linux
-        run: flutter build linux --verbose
+        run: flutter build linux --release --verbose
       - name: Zip 
         uses: thedoctor0/zip-release@master
         with:
