--- a/.github/workflows/nightly-windows.yml
+++ b/.github/workflows/nightly-windows.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          vcpkg install lmdb 
+          vcpkg install lmdb gtk3
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
