--- a/.github/workflows/nightly-windows.yml
+++ b/.github/workflows/nightly-windows.yml
@@ -21,7 +21,7 @@ jobs:
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
       - name: Install dependencies
         run: |
-          vcpkg install lmdb gtk3
+          vcpkg install lmdb gtk3 pkgconf
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
