--- a/.github/workflows/nightly-windows.yml
+++ b/.github/workflows/nightly-windows.yml
@@ -13,12 +13,14 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
+      
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v7
         with:
           script: |
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
+      
       - name: Install dependencies
         run: |
           vcpkg install lmdb gtk3 pkgconf
@@ -34,6 +36,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
+      
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -53,12 +56,17 @@ jobs:
 
       - name: Build Windows
         run: flutter build windows --release --verbose
-
+      
+      - uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 7
+    
       - name: Upload artifact 
         uses: actions/upload-artifact@v4
         with:
           path: build/windows/x64/runner/Release/
-          name: Rune-${{ github.ref_name }}-windows
+          name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-windows
 
       
       
