--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   very_good_infinite_list: ^0.8.0
   flutter_fullscreen: ^1.0.1
   window_manager: ^0.3.9
+  device_info_plus: ^10.1.2
 
 dev_dependencies:
   build_runner: ^2.4.11
