--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_fullscreen: ^1.0.1
   window_manager: ^0.3.9
   device_info_plus: ^10.1.2
+  macos_secure_bookmarks: ^0.2.1
 
 dev_dependencies:
   build_runner: ^2.4.11
