--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -20,6 +20,12 @@ jobs:
         brew install flutter rust lmdb
 
     - uses: Swatinem/rust-cache@v2
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "26.x"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Install the Rust dependencies
       run: cargo install 'flutter_rust_bridge_codegen' rinf protoc-gen-prost
