--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -15,7 +15,7 @@ jobs:
         
       - name: Install dependencies
         run: |
-          brew install CocoaPods lmdb
+          brew install CocoaPods lmdb create-dmg
           brew info lmdb
           
       - name: Setup Flutter
@@ -46,18 +46,32 @@ jobs:
       - name: Generate message files
         run: rinf message 
         
-      - name: Build macOS
-        run: flutter build macos --release --verbose
-        
       - uses: benjlevesque/short-sha@v3.0
         id: short-sha
         with:
           length: 7
           
-      - name: Upload artifact 
+      - name: Build macOS and Create DMG
+        run: |
+          cd macos
+          pod update
+          cd ..
+          flutter build macos --release
+          chmod -R +x build/macos/Build/Products/Release/player.app
+          xattr -cr build/macos/Build/Products/Release/player.app
+          create-dmg \
+            --volname "Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS" \
+            --window-pos 200 120 \
+            --window-size 800 450 \
+            --icon-size 100 \
+            --app-drop-link 600 185 \
+            Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS.dmg \
+            build/macos/Build/Products/Release/player.app
+          
+      - name: Upload artifact macOS DMG
         uses: actions/upload-artifact@v4
         with:
-          path: build/macos/Build/Products/Release/player.app
+          path: "*.dmg"
           name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS
 
   release:
@@ -65,27 +79,15 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
-      - uses: benjlevesque/short-sha@v3.0
-        id: short-sha
-        with:
-          length: 7
-          
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           pattern: Rune-*-macOS
           path: artifacts
           
-      - name: Build Zip for Release
-        uses: thedoctor0/zip-release@master
-        with:
-          type: "zip"
-          filename: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS.zip
-          directory: artifacts
-          
       - name: Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "artifacts/Rune-*.zip"
+          artifacts: "artifacts/*.dmg"
           allowUpdates: true
           replacesArtifacts: false
