feat: Calculate CRC based on cover art content but not the file hash

--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -18,4 +18,6 @@ lofty = "0.20.1"
 regex = "1.10.6"
 analysis = { path = "../analysis" }
 anyhow = {version="1.0.86",  features = ["backtrace"] }
+image = "0.25.2"
+palette_extract = "0.1.0"
 
