--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,6 @@ on:
 
 jobs:
   build-windows:
-    permissions:
-      contents: write
     runs-on: windows-latest
     env: 
         VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
@@ -67,6 +65,8 @@ jobs:
           directory: build/windows/x64/runner/Release
 
   release-windows:
+    permissions:
+      contents: write
     needs: build-windows
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -85,8 +85,6 @@ jobs:
           replacesArtifacts: false
 
   build-linux:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
@@ -147,6 +145,8 @@ jobs:
           directory: build/linux/x64/release/bundle
 
   release-linux:
+    permissions:
+      contents: write
     needs: build-linux
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -232,6 +232,8 @@ jobs:
           name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-macOS
 
   release-macos:
+    permissions:
+      contents: write
     needs: build-macos
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -245,6 +247,6 @@ jobs:
       - name: Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "artifacts/*.dmg"
+          artifacts: "artifacts/*.zip"
           allowUpdates: true
           replacesArtifacts: false
